public class Cap extends Data {


    public Cap(String color, String manufacturer, float price) {
        super(color, manufacturer, price);
    }
    @Override
    public String getName() {
        return " Кепка";
    }
}
