public interface Item {
    String getName();
    String getColor();
    String getManufacturer();
    float getPrice();
}
