public class TShirt extends Data {


    public TShirt(String color, String manufacturer, float price) {
        super(color, manufacturer, price);
    }

    @Override
    public String getName() {
        return " Футболка";
    }


}
