@startuml
class Data {
- String color
- String manufacturer
- float price
+ String getName()
+ String getColor()
+ String getManufacturer()
+ float getPrice()
}
class Main {
+ {static} void main(String[])
}
interface Item {
~ String getName()
~ String getColor()
~ String getManufacturer()
~ float getPrice()
}
class OrderBuilder {
- List<Item> items
+ Item addItem(Item)
+ float getTotalCost()
+ void showOrder()
}
class Cap {
+ String getName()
}
class TShirt {
+ String getName()
}


Item <|.. Data
Data <|-- Cap
Data <|-- TShirt
@enduml